--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keyword"  content="huxpro, @huxpro, Hux, 黄玄, Hux黄玄, 鬼栈, Hux Blog, Github, 博客, 互联网, 前端, 设计, 产品, Hux 的个人网站, 黄玄的个人网站, 肖玉, Lynn, 肖玉的男朋友, Lynn Boyfriend ">
+    <meta name="keyword"  content="Xin's Blog ">
     <meta name="description" content="{{ site.description }}">
     <link rel="shortcut icon" href="img/favicon.ico">
 
@@ -40,7 +40,7 @@
     <![endif]-->
 
 
-    <!-- Hux add tongji.baidu -->
+    <!-- Hux add tongji.baidu
     <script>
         var _hmt = _hmt || [];
         (function() {
@@ -50,5 +50,9 @@
           s.parentNode.insertBefore(hm, s);
         })();
     </script>
-    
+    -->
+    <!-- Google Analytics -->
+    <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-68089502-1', 'auto');ga('send', 'pageview');</script>
+
+
 </head>
