--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,12 @@
 <img src="/img/icon_wechat.png" width="0" height="0" />
 <!-- Migrate from head to bottom, no longer block render and still work -->
 
-<!-- Tencent QQ Analysis -->
+<!-- Tencent QQ Analysis
 <script type="text/javascript" src="http://tajs.qq.com/stats?sId=43623438" charset="UTF-8"></script>
+-->
+<!--Google Analysis -->
+<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-68089502-1', 'auto');ga('send', 'pageview');</script>
+
 </body>
 
 </html>
