--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,6 +18,7 @@
                 <li>
                     <a href="{{ site.baseurl }}/">Home</a>
                 </li>
+                <!--
                 {% for page in site.pages %}
                     {% if page.title %}
                     <li>
@@ -25,6 +26,17 @@
                     </li>
                     {% endif %}
                 {% endfor %}
+                --> 
+                <li>
+                    <a href="/about/">ABOUT</a>
+                </li>
+                <li>
+                    <a href="/contact/">CONTACT</a>
+                </li>
+                <li>
+                    <a href="/tags/">TAGS</a>
+                </li>
+
 
                 <!-- Hux customized -->
 
