--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -76,6 +76,16 @@
                         </a>
                     </li>
                     {% endif %}
+                    {% if site.email %}
+                    <li>
+                        <a href="mailto:{{ site.email }}">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-gmail fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
+                    {% endif %}
                 </ul>
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
