--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -58,7 +58,7 @@
                     {% endif %}
                     {% if site.linkedin_username %}
                     <li>
-                        <a target="_blank" href="https://se.linkedin.com/in/{{ site.facebook_username }}">
+                        <a target="_blank" href="https://se.linkedin.com/in/{{ site.linkedin_username }}">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
