--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -92,6 +92,23 @@ layout: default
                 </div>
                 <!-- 多说评论框 end -->
                 {% endif %}
+                
+                {% if site.useDisqus %}
+                <!-- Disqus start -->
+                <div id="disqus_thread"></div>
+                <script type="text/javascript">
+                        /* * * CONFIGURATION VARIABLES * * */
+                    var disqus_shortname = 'xinsblog';
+                        /* * * DON'T EDIT BELOW THIS LINE * * */
+                        (function() {
+                                 var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                                         dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                                                 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                                                     })();
+                                                 </script>
+                                                 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+                <!-- Disqus end -->
+                {% endif %}
 
                 <!-- friends -->
                 {% if site.friends %}
