--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -55,8 +55,8 @@ layout: default
 
                 <hr>
 
+                <!--
                 {% if site.useDuoshuo && site.useShare %}
-                <!-- 多说 Share start -->
                 </style>
                 <div class="ds-share"
                     style="text-align: right"
@@ -76,8 +76,8 @@ layout: default
                     </div>
                 <hr>
                 </div>
-                <!-- 多少 Share end-->
                 {% endif %}
+                -->
 
 
                 <ul class="pager">
@@ -93,14 +93,26 @@ layout: default
                     {% endif %}
                 </ul>
 
-
+                <!--
                 {% if site.useDuoshuo %}
-                <!-- 多说评论框 start -->
                 <div class="comment">
                     <div class="ds-thread" data-thread-key="{{page.id}}" data-title="{{page.title}}" data-url="{{site.url}}{{page.url}}"></div>
                 </div>
-                <!-- 多说评论框 end -->
                 {% endif %}
+                -->
+
+                {% if site.disqus_shortname %}
+                <!-- Disqus start -->
+                <div id="disqus_thread"></div>
+                <script type="text/javascript">
+                        /* * * CONFIGURATION VARIABLES * * */
+                var disqus_shortname =  {{ site.disqus_shortname }} ;'xinsblog';
+                /* * * DON'T EDIT BELOW THIS LINE * * */
+                (function() {
+                    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                    })();
 
                 <!-- friends -->
                 {% if site.friends %}
