--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -97,7 +97,7 @@ layout: default
                 <div id="disqus_thread"></div>
                 <script type="text/javascript">
                         /* * * CONFIGURATION VARIABLES * * */
-                var disqus_shortname =  {{ site.disqus_shortname }} ;'xinsblog';
+                var disqus_shortname =  '{{ site.disqus_shortname }}';
                 /* * * DON'T EDIT BELOW THIS LINE * * */
                 (function() {
                     var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
