--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -113,6 +113,11 @@ layout: default
                     dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
                     (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
                     })();
+                </script>
+                <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+                <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+                <!-- Disqus end -->
+                {% endif %}
 
                 <!-- friends -->
                 {% if site.friends %}
